--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>&#169; Made By <i class="fa-solid fa-heart-pulse"></i> Prashant</span>
+        <span>&#169; Made By <i class="fa-solid fa-heart-pulse"></i> Aman</span>
     </footer>
 
     <script src="script.js"></script>
