made git hub stats responsive

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 
         <div class="calendar react-activity-calendar">
-            Loading the data just for you.
+            <h1 style="font-weight: 300;">Loading the data just for you</h1> 
         </div>
 
         <div class="git-box">
