added some changes in resume

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
     </section>
 
-    <!-- footer section start -->
+    <!-- footer section start  ---->
     <footer>
         <span>&#169; Made By <i class="fa-solid fa-heart-pulse"></i> Aman</span>
     </footer>
