--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
                     <div class="text"><span class="aboutRaw" id="user-detail-name">I'm Aman Choure and I'm a</span> <br>
                         <span class="typing-2"></span>
                     </div>
-                    <p id="user-detail-intro">With a passion for building scalable and efficient web applications.I
-                        have completed several projects that have helped me build a strong foundation in front-end and
-                        back-end technologies.I'm proficient in working with Java,MySQL,and JavaScript,and I'm
-                        eager to expand my skillset and learn new technologies.I'm excited to leverage my skills and
-                        experience to contribute to the growth of an organization.</p>
+                    <p id="user-detail-intro">Results-driven Java Backend Developer with 2 years of experience in designing, developing, and deploying scalable
+microservices and RESTful APIs using Java, Spring Boot, Hibernate, and JPA. Proficient in unit testing with JUnit and
+experienced in the Insurance domain, delivering secure, high-performance, and maintainable backend solutions.
+.</p>
 
                     <!-- <button id="resume-button-2" class="nav-link resume">Download CV</button> -->
                     <a download="Aman-Choure-Resume.pdf" href="images/files/Aman-Choure-Resume.pdf"
@@ -384,7 +383,7 @@
         window.location.href = "mailto:amanchoure0358@gmail.com";
     }
     function resume() {
-        window.open("https://drive.google.com/file/d/1bU2VTSmzGPZdsKFIz5YjyvifIdXv7SzH/view?usp=sharing", "_blank")
+        window.open("https://drive.google.com/file/d/1QIpOshJXc1oZYLRFYD6Sm0eUnwlPBzEG/view?usp=sharing", "_blank")
     }
 
 
